# smizip

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
example-ngrams/: combined.slow.json  ob.slow.json  oe.slow.json
smizip/: __init__.py  smizip.py
smizip/examples/: oe.rnum.slow.json  rdkit.slow.json
smizip/scripts/: add_char_to_ngrams.py  compress.py  find_best_ngrams.py
tests/: test_zip.py
